# bupstash

./: Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  do
.github/workflows/: ci.yml  release.yml
cli-tests/: cli-tests.bats  diod-thrash.sh  mk-random-dir.py  parallel-thrash.sh  s3-parallel-thrash.sh
csrc/: sodium-bindings.h
csrc/cksumvfs/: cksumvfs_sqlite_version_number.c  upgrade.sh
doc/: TODO.txt  quickstart.md  technical_overview.md  upcoming_changelog.md
doc/cli/: checkout.txt  diff.txt  exec-with-locks.txt  gc.txt  get.txt  help.txt  init.txt  list-contents.txt  list.txt  new-client-key.txt  new-key.txt  new-master-key.txt  new-metadata-key.txt  new-put-key.txt  new-send-key.txt  new-sub-key.txt  put.txt  recover-removed.txt  restore-removed.txt  restore.txt  rm.txt  serve.txt  sync.txt  version.txt
doc/formats/: keys.md
doc/guides/: Filesystem Backups.md  Getting Started.md  Network Filesystems.md  Password Protected Keys.md  Remote Access Controls.md  Secure Offline Keys.md
doc/man/: bupstash-authors.7.md  bupstash-checkout.1.md  bupstash-diff.1.md  bupstash-exec-with-locks.1.md  bupstash-gc.1.md  bupstash-get.1.md  bupstash-init.1.md  bupstash-keyfiles.7.md  bupstash-list-contents.1.md  bupstash-list.1.md  bupstash-new-key.1.md  bupstash-new-metadata-key.1.md  bupstash-new-put-key.1.md  bupstash-new-sub-key.1.md  bupstash-put.1.md  bupstash-query-language.7.md  bupstash-recover-removed.1.md  bupstash-repository.7.md  bupstash-restore-removed.1.md  bupstash-restore.1.md  bupstash-rm.1.md  bupstash-serve.1.md  bupstash-sync.1.md  bupstash.1.md  index.txt
src/: abloom.rs  acache.rs  address.rs  awcache.rs  base64.rs  chunk_storage.rs  chunker.rs  cksumvfs.rs  client.rs  compression.rs  crypto.rs  crypto2.rs  dir_chunk_storage.rs  external_chunk_storage.rs  fmtutil.rs  fprefetch.rs  fstx.rs  fstx1.rs  fstx2.rs  fsutil.rs  hex.rs  htree.rs  hydrogen.rs  index.rs  indexer.rs  indexer2.rs  ioutil.rs  itemset.rs  keys.rs  local_chunk_storage.rs  main.rs  metering.rs  migrate.rs  oplog.rs  pem.rs  protocol.rs  put.rs  putpipeline.rs  query.rs  querycache.rs  (+14 more)
support/: bench.sh  bindgen.sh  geartab.janet  linux-x64_64-release.sh  pgo-build.sh  plot-chunk-sizes.gnuplot  pre-commit.sh  print-doc-checklist.sh  shell.nix  src-release.sh
support/builds.sr.ht/: debian.yml  freebsd.yml  openbsd.yml
support/linux-musl-hpkgs/: bupstash-v0.1.0.hpkg  bupstash-v0.2.0.hpkg  bupstash-v0.3.0.hpkg  bupstash-v0.4.0.hpkg  bupstash-v0.4.1.hpkg  bupstash-v0.5.0.hpkg  bupstash-v0.6.0.hpkg  bupstash-v0.6.2.hpkg  bupstash-v0.6.3.hpkg
