[package]
name = "bupstash"
version = "0.1.0"
authors = ["Andrew Chambers <ac@acha.ninja>"]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
incremental = false

[dependencies]

crossbeam-channel = "0.4"
libc = "0.2"
rusqlite = { version = "0.23" }
getopts = "0.2"
failure = "0.1"
fs2 = "0.4.3"
codemap = "0.1"
codemap-diagnostic = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bare = "0.3"
path-clean = "0.1.0"
humantime = "2.0.1"
atty = "0.2"
once_cell = "1.4"
tar = "0.4"
regex = "1"
glob = "0.3"
zstd = "0.5"
chrono = { version = "0.4", features = ["serde"]}
cfg-if = "0.1"
shlex = "0.1"
nix = "0.17"
indicatif = "0.15"

[dev-dependencies]

tempfile = "3"

[build-dependencies]

pkg-config = "0.3"

