[package]
name = "bupstash"
version = "0.9.0"
authors = ["Andrew Chambers <ac@acha.ninja>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/andrewchambers/bupstash"
readme = "README.md"
description = "Easy and efficient encrypted backups."

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
incremental = false

[dependencies]

lz4 = "1.23"
anyhow = "1.0"
thiserror = "1.0"
crossbeam-channel = "0.5"
libc = "0.2"
rusqlite = { version = "0.23", features = ["bundled", "backup"] }
getopts = "0.2"
fs2 = "0.4.3"
codemap = "0.1"
codemap-diagnostic = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bare = "0.3"
path-clean = "0.1.0"
humantime = "2.0.1"
atty = "0.2"
once_cell = "1.4"
tar = "0.4"
regex = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"]}
cfg-if = "0.1"
shlex = "0.1"
nix = "0.20"
indicatif = "0.15"
rangemap = "0.1.7"
blake3 = "0.3"
xattr = "0.2"

[dev-dependencies]

tempfile = "3"

[build-dependencies]

pkg-config = "0.3"

