[package]
name = "bupstash"
version = "0.11.0"
authors = ["Andrew Chambers <ac@acha.ninja>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/andrewchambers/bupstash"
readme = "README.md"
description = "Easy and efficient encrypted backups."

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
incremental = false

[dependencies]

# More trusted dependencies
crossbeam-channel = "0.5"
blake3 = "1"
rusqlite = { version = "0.25", features = ["bundled"] }
lz4 = "1.2"
zstd-safe = { version = "4.1", features = ["std", "experimental"] }
anyhow = "1"
thiserror = "1.0"
libc = "0.2"
getopts = "0.2"
codemap = "0.1"
codemap-diagnostic = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bare = "0.4"
path-clean = "0.1.0"
humantime = "2.0.1"
atty = "0.2"
once_cell = "1.4"
tar = "0.4"
regex = "1"
globset = "0.4.8"
chrono = { version = "0.4", features = ["serde"]}
cfg-if = "0.1"
shlex = "0.1"
nix = "0.23"
indicatif = "0.16.2"
rangemap = "0.1.11"
xattr = "0.2"
openat = "0.1"
lazy_static = "1.4"
walkdir = "2"

[dev-dependencies]

rand = "0.8"
tempfile = "3"
serial_test = "0.5"

[build-dependencies]

cc = "1"
pkg-config = "0.3"
